- Update to 26.1 - Use merged jar - Get rid of Architectury plugin and api - Mojang map - gradle 9.4.1 / wrapper - change lombok dependencies to lombok plugin